[gd_scene load_steps=4 format=3 uid="uid://berwbi3f1xvju"]

[ext_resource type="Script" path="res://lp43.gd" id="1_q7isd"]

[sub_resource type="Theme" id="Theme_e214c"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_a53gv"]
default_font_size = 32

[node name="lp43" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7isd")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 188.0
offset_top = 34.0
offset_right = 974.0
offset_bottom = 288.0
theme = SubResource("Theme_e214c")
placeholder_text = "Eggs"
alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 368.0
offset_right = 975.0
offset_bottom = 420.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 525.0
offset_right = 228.0
offset_bottom = 619.0
theme = SubResource("Theme_a53gv")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 525.0
offset_right = 637.0
offset_bottom = 619.0
theme = SubResource("Theme_a53gv")
text = "Clear
"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 884.0
offset_top = 525.0
offset_right = 1070.0
offset_bottom = 619.0
theme = SubResource("Theme_a53gv")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
